assert-struct/tests/snapshots/enums__tuple_enum_field_mismatch.snap
---
source: assert-struct/tests/enums.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/enums_errors/tuple_enum_field_mismatch.rs:26:43
   |
26 |             current: Message::Complex(42, "test", true),
   |                                           ^^^^^^ got "wrong"
